update examples (using smaller images)

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,7 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit THIS (Rmd) file. -->
 
-<!-- Status badges: 
+<!-- Status badges:
 
 [![CRAN_status](http://www.r-pkg.org/badges/version/unikn)](https://CRAN.R-project.org/package=unikn) 
 [![Build_status](https://travis-ci.org/hneth/unikn.svg?branch=master)](https://travis-ci.org/hneth/unikn) 
@@ -23,11 +23,11 @@ knitr::opts_chunk$set(
 library(unikn)  # load package
 ```
 
-# unikn  <img src = "./inst/pix/unikn.png" align = "right" alt = "riskyr" width = "140" />
+# unikn  <img src = "./inst/pix/unikn.png" align = "right" alt = "riskyr" width = "125px" />
 
 <!-- unikn pkg logo and link: --> 
 <!-- <a href = "https://github.com/hneth/unikn/">
-<img src = "./inst/pix/unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:10;"/>
+<img src = "./inst/pix/unikn.png" alt = "unikn::" align = "right" width = "125px" style = "width: 125px; float: right; border:10;"/>
 </a> 
 -->
 
@@ -214,6 +214,8 @@ seecol(pal_unikn, n = 21)
 
 Note that reducing an **unikn** color palette selects a suitable subset of its colors, rather than just truncating the scale. 
 
+<!-- 
+
 - Combining colors to create new color palettes (of arbitrary length): 
 
 ```{r col_scale_2, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
@@ -221,6 +223,8 @@ Note that reducing an **unikn** color palette selects a suitable subset of its c
 seecol(c(Seeblau, "white", Pinky), 11) 
 # seecol(c(Karpfenblau, Seeblau, "gold"), 10) 
 ```
+
+--> 
 
 - Mixing and merging colors and color palettes into new color palettes: 
 
@@ -239,9 +243,9 @@ The **unikn** package exports the color palettes shown by `seecol(pal = "all")` 
 the 9&nbsp;preferred colors of `pal_unikn_pref` (e.g., `Seeblau`, `Seegruen`, etc.) as named colors. 
 
 The `usecol()` function provides convenient access and additional options for using them in graphs. 
-Some examples for using 
+Here are some examples:  
 
-1. Some examples of using **unikn** color palettes and functions in base R plots: 
+1. Using **unikn** color palettes and functions in base R plots: 
 
 By default, simply set the color argument of a plot to `usecol()` with some **unikn** color palette: 
 
@@ -250,6 +254,9 @@ By default, simply set the color argument of a plot to `usecol()` with some **un
 barplot(1/sqrt(1:11),  col = usecol(pal_unikn))
 ```
 
+Providing an additional value for `n` would reduce or extend the selected color palette and adding an opacity value for `alpha` (in the range `[0, 1]`) would regulate transparency. 
+
+<!-- 
 Additionally providing a value for `n` either reduces or extends the selected color palette: 
 
 ```{r usepal_demo_barplot_2, eval = TRUE, out.width = "50%", fig.asp = .65, fig.align = 'center', collapse = TRUE}
@@ -267,9 +274,11 @@ plot(x = runif(99), y = runif(99), "p", pch = 16, cex = 6,
      main = "99 transparent dots", axes = FALSE, xlab = NA, ylab = NA)
 ```
 
+-->
+
 2. Visualizing **unikn** color palettes with `image`: 
 
-```{r use_pal_demo_image, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold'}
+```{r use_pal_demo_image, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
 # Random images:
 set.seed(1)
 n <- 20
@@ -281,7 +290,9 @@ m <- matrix(rnorm(n*n), ncol = n, nrow = n)
 # image(m, col = usecol(pal_petrol))
 image(m, col = usecol(pal_seeblau, n = 50), 
       main = "50 shades of Seeblau", axes = FALSE)
+```
 
+```{r use_pal_demo_image-2, echo = FALSE, eval = FALSE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
 # Mix pal_seeblau and pal_seegruen:
 x <- y <- seq(-4 * pi, 4 * pi, len = 15)
 r <- sqrt(outer(x^2, y^2, "+"))
@@ -291,7 +302,7 @@ image(z = cos(r^2) * exp(-r/6), col = usecol(c(pal_petrol, pal_seegruen), n = 10
 
 3. Using **unikn** in `ggplot` calls (using **ggplot2**):
 
-```{r use_pal_ggplot2, eval = FALSE, out.width = "67%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
+```{r use_pal_ggplot2, eval = FALSE, out.width = "60%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
 # Example based on https://www.r-graph-gallery.com/137-spring-shapes-data-art/ 
 
 # (1) Create data: ---- 
@@ -332,7 +343,7 @@ ggplot(df, aes(x = X, y = Y, fill = group)) +
   theme(legend.position = "none")
 ```
 
-<img src = "./inst/pix/README-use_pal_ggplot2-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/>
+<img src = "./inst/pix/README-use_pal_ggplot2-1.png" align = "center" width = "500px" alt = "Using pal_unikn in ggplot" style = "border:10;"/>
 
 ## Generalization to other institutions 
 
@@ -418,9 +429,27 @@ names(pal_princeton_1) <- c("orange_w", "white", "black")
 
 pal_princeton_2 <- c(pal = c(orange_black, "black", "white"))
 names(pal_princeton_2) <- c("orange_b", "black", "white")
-
-seecol(pal_princeton_1)  # view color palette
 ```
+
+The new color palettes (e.g., `pal_princeton_1`) can now be viewed with `seecol()`, scaled by `usecol()`, and used in graphs (e.g., in `ggplot` commands):
+
+```{r use_ggplot2_princeton, eval = FALSE, out.width = "60%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
+# View color palette: 
+# seecol(pal_princeton_1)  
+
+# Scale color palette (using df and ngroup from above):
+my_pal <- usecol(pal = pal_princeton_1, n = ngroup)
+
+# Use my_pal for plotting: 
+ggplot(df, aes(x = X, y = Y, fill = group)) + 
+  geom_area(alpha = 1, color = Grau, size = .01 ) +
+  theme_bw() + 
+  scale_fill_manual(values = my_pal) +
+  theme_void() +
+  theme(legend.position = "none")
+```
+
+<img src = "./inst/pix/README-use_ggplot2_princeton-1.png" align = "center" width = "500px" alt = "pal_unikn" style = "border:10;"/>
 
 #### C. [Max Planck Society](https://www.mpg.de/), Germany: 
 <img src = "./inst/pix/logo_MPG.png" align = "right" alt = "MPG" width = "200px" style = "border:10;"/>
@@ -470,8 +499,15 @@ names(pal_mpg) <- c("mpg green", "white", "mpg grey")
 
 As before, can now use the `seecol()` and `usecol()` functions to view, modify, and use the new `pal_mpg` color palette: 
 
-```{r MPG_seecol, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
-seecol(pal_mpg)
+```{r use_pal_demo_mpg, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
+# View color palette: 
+# seecol(pal_mpg)
+
+# Use pal_mpg in image:
+x <- y <- seq(-4 * pi, 4 * pi, len = 15)
+r <- sqrt(outer(x^2, y^2, "+"))
+image(z = cos(r^2) * exp(-r/6), col = usecol(pal_mpg, n = 10), 
+      main = "Shades of MPG (using pal_mpg)", axes = FALSE)
 ```
 
 #### Comparing color palettes 
@@ -483,7 +519,6 @@ Once a new palette is defined (and available in your current R environment), the
 # seecol(list(pal_mpg, pal_princeton_1, pal_unikn))       # compare basic versions
 seecol(list(pal_mpg, pal_princeton_1, pal_unikn), n = 9)  # compare scaled versions
 ```
-
 
 ## Text decorations
 
@@ -584,7 +619,7 @@ We aim for an authentic representation of a highly-specified corporate design. W
 
 <!-- unikn pkg logo and link: -->
 <a href = "https://github.com/hneth/unikn/">
-<img src = "./inst/pix/unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:10;"/>
+<img src = "./inst/pix/unikn.png" alt = "unikn::" align = "right" width = "125px" style = "width: 125px; float: right; border:10;"/>
 </a>
 
 <!-- License: CC BY-SA 4.0 (also in Description) -->
