--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ library(unikn)  # load package
 
 The **unikn** package enables using some elements of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design in [R](https://www.r-project.org/). 
 **unikn** currently provides a range of dedicated color palettes for scientific visualizations and defines styled text elements (e.g., for marking, underlining, or plotting colored titles) that are consistent with the official design specifications (see [this link](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details). 
-Although the package is based on detailed specifications of a particular institution, its functionality can easily be adopted and extended for other purposes and institutions. 
+While the package is based on detailed specifications of a particular institution, its functionality can easily be adopted and extended for other purposes and institutions. 
 
 ## Background 
 
@@ -572,6 +572,36 @@ my_url <- url_unikn("https://www.uni-konstanz.de/")  # input URL as copied from 
 
 post(labels = my_url, x = .2, y = .1, font = 4, new_plot = "xbox")
 ```
+
+## Other institutions 
+
+If custom color palettes are available (see definitions above), the text decoration functions can be used for graphical annotations in the style of other institutions: 
+
+```{r others_txt_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 6, fig.height = 4.5}
+# (A) Using pal_freiburg_basic and pal_freiburg_blue: 
+uline(labels = c("University of Freiburg"), 
+      x = .6, y = .85, font = 2, cex = 1, 
+      col = pal_freiburg_basic[[1]], col_bg = pal_freiburg_basic[[3]], 
+      new_plot = "slide")
+mark(labels = c("Die Wahrheit", "wird Euch", "frei machen."), 
+     x = 0, y = .90, y_layout = 0, cex = 1.5, 
+     col = c("white"), col_bg = rev(usecol(pal_freiburg_blue, 3)))
+
+# (B) Using orange_white or pal_princeton:
+uline(labels = c("Princeton University"), 
+      x = .6, y = .5, font = 2, cex = 1, col_bg = orange_white)
+mark(labels = c("Go", "Tigers!"), 
+     x = 0, y = .55, y_layout = 0, cex = 1.8,  
+     col = c("black", "white"), col_bg = pal_princeton)
+
+# (C) Using pal_mpg:
+uline(labels = c("Max Planck Society"), 
+      x = .6, y = .20, font = 2, cex = 1, col_bg = usecol(pal_mpg, 1), col = "black")
+mark(labels = c("Dem Anwenden", "muss das Erkennen", "vorausgehen"), 
+     x = 0, y = .25, y_layout = 0, cex = 1.5, 
+     col = c("white"), col_bg = usecol(pal_mpg, 7)[3:1])
+```
+
 
 ### Caveats
 
