--- a/README.Rmd
+++ b/README.Rmd
@@ -630,6 +630,22 @@ The **unikn** package is work in progress. We are still working on:
 Please [contact us](https://www.spds.uni-konstanz.de/) in case you need additional features or want to help us implementing them.  
 
 
+## Resources
+
+The following resources and versions of **unikn** are currently available:
+
+Type:                    | Version:           | URL:                           |         
+:------------------------|:-------------------|:-------------------------------| 
+A. **unikn** (R package): | [Release version](https://CRAN.R-project.org/package=unikn) | <https://CRAN.R-project.org/package=unikn> |
+    &nbsp;                | [Development version](https://github.com/hneth/unikn)       | <https://github.com/hneth/unikn> | 
+B. Online documentation:  | [Release version](https://hneth.github.io/unikn)            | <https://hneth.github.io/unikn> | 
+    &nbsp;                | [Development version](https://hneth.github.io/unikn/dev)    | <https://hneth.github.io/unikn/dev> | 
+
+## Contact
+
+We appreciate your feedback, comments, or questions. 
+Please report any **unikn**-related issues at <https://github.com/hneth/unikn/issues>. 
+
 ## Copyrights 
 
 <!-- uni.kn logo and link: -->  
