--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Colors and color palettes"
 author: "SPDS, uni.kn"
-date: "2019 06 14"
+date: "2019 06 15"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -478,15 +478,27 @@ As before, can now use the `seecol()` and `usecol()` functions to view, modify, 
 seecol(pal_mpg)
 ```
 
+## Resources
 
-## All unikn vignettes
+The following versions of **unikn** and corresponding resources are currently available: 
+
+Type:                    | Version:           | URL:                           |         
+:------------------------|:-------------------|:-------------------------------| 
+A. **unikn** (R package): | [Release version](https://CRAN.R-project.org/package=unikn) | <https://CRAN.R-project.org/package=unikn> |
+    &nbsp;                | [Development version](https://github.com/hneth/unikn)       | <https://github.com/hneth/unikn> | 
+B. Online documentation:  | [Release version](https://hneth.github.io/unikn)            | <https://hneth.github.io/unikn> | 
+    &nbsp;                | [Development version](https://hneth.github.io/unikn/dev)    | <https://hneth.github.io/unikn/dev> | 
+
+## Vignettes
 
 <!-- unikn pkg logo and link: -->
 <a href = "https://github.com/hneth/unikn/">
 <img src = "../inst/pix/unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
-</a>
+</a> 
 
-<!-- Index of vignettes: -->
+The following vignettes provide instructions and examples for using the **unikn** objects and functions: 
+
+<!-- Table of vignettes: -->
 
 | Nr.  | Vignette | Content    |        
 | ---: |:---------|:-----------|
