--- a/README.Rmd
+++ b/README.Rmd
@@ -4,10 +4,11 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit THIS (Rmd) file. -->
 
-<!-- Used status badges:    --> 
+<!-- Used status badges: --> 
 
 [![CRAN_status](http://www.r-pkg.org/badges/version/unikn)](https://CRAN.R-project.org/package=unikn) 
 [![Downloads](http://cranlogs.r-pkg.org/badges/unikn?color=brightgreen)](http://www.r-pkg.org/pkg/unikn) 
+
 
 <!-- Possible status badges:
 
@@ -638,7 +639,7 @@ Please [contact us](https://www.spds.uni-konstanz.de/) in case you need addition
 
 ## Resources
 
-The following resources and versions of **unikn** are currently available: 
+The following versions of **unikn** and corresponding resources are currently available: 
 
 Type:                    | Version:           | URL:                           |         
 :------------------------|:-------------------|:-------------------------------| 
