--- a/README.Rmd
+++ b/README.Rmd
@@ -45,7 +45,7 @@ but can be adapted and extended for other institutions and purposes.
 
 ## Background 
 
-Most major institutions devise corporate design (CD) manuals to create and maintain a consistent impression in presentations and publications. 
+Many institutions devise corporate design (CD) manuals to create and maintain a consistent impression in presentations and publications. 
 For instance, the [University of Konstanz](https://www.uni-konstanz.de/) introduced a highly recognizable corporate design in 2014. 
 Its key component is the consistent use of a `Seeblau` color and a corresponding color palette that blends various shades of `Seeblau` (in boxes, lines, and other graphical elements) with text (in black-and-white). (See the official [brand information](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) and the 
 [Corporate Design Manual (pdf)](https://www.uni-konstanz.de/typo3temp/secure_downloads/57014/0/0143c03b80bd1fa99843c8f8686f806305928078/UKN_CD_Manual_150921.pdf) for details.) 
@@ -522,10 +522,10 @@ image(z = cos(r^2) * exp(-r/6), col = usecol(pal_mpg, n = 10),
 
 Once a new palette is defined (and available in your current R environment), the `seecol()` and `usecol()` functions allow comparing, scaling, and using them in the same fashion as the native **unikn** color palettes: 
 
-```{r compare_custom_pals, out.width = "75%", fig.asp = .50, fig.align = 'center', collapse = TRUE}
+```{r compare_custom_pals, out.width = "75%", fig.asp = .40, fig.align = 'center', collapse = TRUE}
 # Compare and extend custom color palettes:
-# seecol(list(pal_mpg, pal_princeton_1, pal_unikn))       # compare basic versions
-seecol(list(pal_mpg, pal_princeton_1, pal_unikn), n = 9)  # compare scaled versions
+# seecol(list(pal_freiburg_info, pal_freiburg_basic, pal_mpg, pal_princeton_1)) # compare basic versions
+seecol(list(pal_freiburg_basic, pal_princeton_1, pal_mpg, pal_unikn), n = 9)    # compare scaled versions
 ```
 
 ## Text decorations
