--- a/README.Rmd
+++ b/README.Rmd
@@ -736,7 +736,7 @@ The copyrights to all designs remain with their original creators:
 
 - Strichpunkt GmbH, [`r url_unikn("https://www.strichpunkt-design.de/")`](https://www.strichpunkt-design.de/)  
 
-Color definitions are based on the following sources at:
+Color definitions are based on the specifications at:
 
 - [Corporate design at uni.kn](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/)
 
