revise section on 'Other institutions' (e.g., using newpal function and comparing custom color palettes)

--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Colors and color palettes"
 author: "SPDS, uni.kn"
-date: "2019 09 24"
+date: "2019 09 26"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -357,11 +357,13 @@ ggplot(df, aes(x = X, y = Y, fill = group)) +
 
 <img src = "./../inst/pix/README-use_pal_ggplot2-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/>
 
-## Generalization to other institutions 
+## Other institutions 
 
-The color scales included in the **unikn** package are based on the CD manual of the [University of Konstanz](https://uni-konstanz.de), Germany. 
-However, the functionality provided by the package makes it easy and straightforward to define and use your own color schemes. 
-Here are some examples from other institutions to illustrate how this can be achieved.  
+The color palettes included in the **unikn** package are based on the CD manual of the [University of Konstanz](https://uni-konstanz.de), Germany. 
+However, the functionality provided by the package makes it easy and straightforward to define and use your own color scales. 
+In the following, we provide examples to illustrate how this can be achieved for other institutions. 
+
+### Defining colors and color palettes 
 
 ```{r Cardiff, echo = FALSE, eval = FALSE, fig.align = 'center', fig.width = 5, fig.height = 3}
 # Cardiff University, UK: 
@@ -400,6 +402,16 @@ names(pal_freiburg_info) <- c("mid-blau", "hell-blau", "dark-red", "hell-red", "
                               "anthrazit", "dark-grey", "mid-grey", "hell-grey", "orange", "gelb")
 ```
 
+Alternatively, we can define both (colors and names) in 1 step by using the `newpal()` function:
+
+```{r newpal_Freiburg}
+pal_freiburg_info <- newpal(col = c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
+                                    "#4d4f53", "#747678", "#b2b4b3", "#d5d6d2", "#e98300", "#efbd47"),
+                            names = c("mid-blau", "hell-blau", "dark-red", "hell-red", "mid-green", "hell-green", 
+                                      "anthrazit", "dark-grey", "mid-grey", "hell-grey", "orange", "gelb")
+                            )
+```
+
 Once a new color palette has been defined (and is available in your current R environment), we can use the `seecol()` and `usecol()` functions to view, modify, and use the palette: 
 
 ```{r seecol_freiburg, fig.width = 7, fig.asp = .618, fig.align = 'center', collapse = TRUE}
@@ -436,14 +448,21 @@ orange_black <- "#F58025"  # orange on black
 pal_princeton <- c(orange_basic, "black")
 names(pal_princeton) <- c("orange", "black")
 
+# Define color palette and names (in 2 steps):
 pal_princeton_1 <- c(orange_white, "white", "black")
 names(pal_princeton_1) <- c("orange_w", "white", "black")
 
-pal_princeton_2 <- c(pal = c(orange_black, "black", "white"))
-names(pal_princeton_2) <- c("orange_b", "black", "white")
+# Define both colors and names (in 1 step) by using the `newpal()` function:
+pal_princeton_1 <- newpal(col = c("#E77500", "white", "black"),
+                          names = c("orange_w", "white", "black"))
+                          
+# Define 2nd color palette:
+pal_princeton_2 <- newpal( col = c(orange_black, "black", "white"), 
+                           names = c("orange_b", "black", "white"))
 
+# View color palette (with custom background color and title):
 seecol(pal_princeton_1,  # view color palette
-       col_bg = "lightgrey")
+       col_bg = "grey90", title = "Color palette of Princeton University")
 ```
 
 #### C. [Max Planck Society](https://www.mpg.de/), Germany: 
@@ -499,6 +518,17 @@ seecol(pal_mpg,
        col_brd = "black", lwd_brd = 2)
 ```
 
+### Comparing custom color palettes 
+
+Once a new palette has been defined (and is available in your current R environment), the `seecol()` and `usecol()` functions allow comparing, scaling, and using them in the same fashion as the native **unikn** color palettes: 
+
+```{r compare-custom-pals, eval = TRUE, fig.width = 6, fig.asp = .50, fig.align = 'center', collapse = TRUE}
+# Compare and extend custom color palettes:
+# seecol(list(pal_freiburg_info, pal_freiburg_basic, pal_mpg, pal_princeton_1)) # compare basic versions
+seecol(list(pal_freiburg_basic, pal_princeton_1, pal_mpg, pal_unikn), n = 9)    # compare scaled versions
+```
+
+
 ## Resources
 
 The following versions of **unikn** and corresponding resources are currently available: 
@@ -509,6 +539,7 @@ A. **unikn** (R package): | [Release version](https://CRAN.R-project.org/package
     &nbsp;                | [Development version](https://github.com/hneth/unikn)       | <https://github.com/hneth/unikn> | 
 B. Online documentation:  | [Release version](https://hneth.github.io/unikn)            | <https://hneth.github.io/unikn> | 
     &nbsp;                | [Development version](https://hneth.github.io/unikn/dev)    | <https://hneth.github.io/unikn/dev> | 
+
 
 ## Vignettes
 
