--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Colors and color palettes"
 author: "SPDS, uni.kn"
-date: "2019 09 26"
+date: "2020 07 26"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -284,7 +284,24 @@ pal2 <- usecol(c(Karpfenblau, Seeblau, "gold"), n = 10)
 seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair))
 ```
 
-Note that unknown color palettes will be named `pal`n in increasing order. Palettes known to `seecol()` will be shown with their respective names.  
+Note that unknown color palettes are named `pal_`$n$, in increasing order. 
+Palettes known to `seecol()` are labeled by their respective names. 
+
+Labeling the custom palettes can be achieved by setting the `pal_names` argument to a character vector of appropriate length: 
+
+```{r set_custom_palette_names, fig.width = 6, fig.height = 3, fig.align = 'center'}
+seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair), 
+       pal_names = c("my_pair", "blue_bord", "blue_yell"),
+       title = "Naming custom color palettes")
+```
+
+If the `pal_names` argument is specified and corresponds to the length of palettes overall, the default names of all color palettes are overwritten by `pal_names`:
+
+```{r set_all_palette_names, fig.width = 6, fig.height = 3, fig.align = 'center'}
+seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair), 
+       pal_names = c("my_pair", "blue_bord", "blue_yell", "blue_black", "mix_pair"),
+       title = "Comparing and naming custom color palettes")
+```
 
 As before, we can use the `n` argument for obtaining shorter subsets of color palettes: 
 
@@ -457,8 +474,8 @@ pal_princeton_1 <- newpal(col = c("#E77500", "white", "black"),
                           names = c("orange_w", "white", "black"))
                           
 # Define 2nd color palette:
-pal_princeton_2 <- newpal( col = c(orange_black, "black", "white"), 
-                           names = c("orange_b", "black", "white"))
+pal_princeton_2 <- newpal(col = c(orange_black, "black", "white"), 
+                          names = c("orange_b", "black", "white"))
 
 # View color palette (with custom background color and title):
 seecol(pal_princeton_1,  # view color palette
@@ -515,7 +532,8 @@ As before, can now use the `seecol()` and `usecol()` functions to view, modify, 
 
 ```{r MPG_seecol, fig.width = 6, fig.asp = .69, fig.align = 'center', collapse = TRUE}
 seecol(pal_mpg, 
-       col_brd = "black", lwd_brd = 2)
+       col_brd = "black", lwd_brd = 2, 
+       title = "Colors of the Max Planck Society")
 ```
 
 ### Comparing custom color palettes 
@@ -524,8 +542,12 @@ Once a new palette has been defined (and is available in your current R environm
 
 ```{r compare-custom-pals, eval = TRUE, fig.width = 6, fig.asp = .50, fig.align = 'center', collapse = TRUE}
 # Compare and extend custom color palettes:
-# seecol(list(pal_freiburg_info, pal_freiburg_basic, pal_mpg, pal_princeton_1)) # compare basic versions
-seecol(list(pal_freiburg_basic, pal_princeton_1, pal_mpg, pal_unikn), n = 9)    # compare scaled versions
+# seecol(list(pal_freiburg_info, pal_freiburg_basic, pal_mpg, pal_princeton_1))
+
+# Scaled version: 
+seecol(list(pal_freiburg_basic, pal_princeton_1, pal_mpg, pal_unikn), n = 9,
+       pal_names = "Freiburg", "Princeton", "Max Planck", "Konstanz",
+       title = "Compare scaled color palettes")
 ```
 
 
