demo new pal_names() option of seecol()

--- a/README.Rmd
+++ b/README.Rmd
@@ -556,8 +556,12 @@ Once a new palette is defined (and available in your current R environment), the
 
 ```{r compare_custom_pals, out.width = "75%", fig.asp = .50, fig.align = 'center', collapse = TRUE}
 # Compare and extend custom color palettes:
-# seecol(list(pal_freiburg_info, pal_freiburg_basic, pal_mpg, pal_princeton_1)) # compare basic versions
-seecol(list(pal_freiburg_basic, pal_princeton_1, pal_mpg, pal_unikn), n = 9)    # compare scaled versions
+pals <- list(pal_freiburg_basic, pal_mpg, pal_princeton_1, pal_unikn)
+lbls <- c("Uni Freiburg", "Max Planck", "Princeton Uni", "Uni Konstanz")
+# seecol(pals, pal_names = lbls,                           # basic versions
+#       title = "Compare and label custom color palettes") 
+seecol(pals, n = 9, pal_names = lbls,                      # scaled versions
+       title = "Compare and label custom color palettes")   
 ```
 
 ## Text decorations
@@ -625,28 +629,28 @@ post(labels = my_url, x = .2, y = .1, font = 4, new_plot = "xbox")
 
 If custom color palettes are available (see definitions above), the text decoration functions can be used for graphical annotations in the style of other institutions: 
 
-```{r others_txt_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 6, fig.height = 4.5}
+```{r others_txt_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 5, fig.height = 3.5}
 # (A) Using pal_freiburg_basic and pal_freiburg_blue: 
 uline(labels = c("University of Freiburg"), 
-      x = .6, y = .85, font = 2, cex = 1, 
+      x = .5, y = .85, font = 2, cex = 1, 
       col = pal_freiburg_basic[[1]], col_bg = pal_freiburg_basic[[3]], 
       new_plot = "slide")
 mark(labels = c("Die Wahrheit", "wird euch", "frei machen."), 
-     x = 0, y = .90, y_layout = 0, cex = 1.5, 
+     x = 0, y = .90, y_layout = 0, cex = 1.2, 
      col = c("white"), col_bg = rev(usecol(pal_freiburg_blue, 3)))
 
 # (B) Using orange_white or pal_princeton:
 uline(labels = c("Princeton University"), 
-      x = .6, y = .55, font = 2, cex = 1, col_bg = orange_white)
+      x = .5, y = .55, font = 2, cex = 1, col_bg = orange_white)
 mark(labels = c("Go", "tigers!"), 
-     x = 0, y = .58, y_layout = 0, cex = 2.0,  
+     x = 0, y = .58, y_layout = 0, cex = 1.2,  
      col = c("black", "white"), col_bg = pal_princeton)
 
 # (C) Using pal_mpg:
 uline(labels = c("Max Planck Society"), 
-      x = .6, y = .25, font = 2, cex = 1, col_bg = usecol(pal_mpg, 1), col = "black")
+      x = .5, y = .25, font = 2, cex = 1, col_bg = usecol(pal_mpg, 1), col = "black")
 mark(labels = c("Dem Anwenden", "muss das Erkennen", "vorausgehen."), 
-     x = 0, y = .30, y_layout = 0, cex = 1.5, 
+     x = 0, y = .30, y_layout = 0, cex = 1.2, 
      col = c("white"), col_bg = usecol(pal_mpg, 7)[3:1])
 ```
 
@@ -747,6 +751,6 @@ Color definitions are based on the specifications at:
 
 <!-- Update: -->
 
-(Updated on `r Sys.Date()`.)  
+[Updated on `r Sys.Date()`.]    
 
 <!-- eof. -->
