--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,7 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit THIS (Rmd) file. -->
 
-<!-- Use status badges: -->
+<!-- Use status badges:  -->
 [![CRAN_status](http://www.r-pkg.org/badges/version/unikn)](https://CRAN.R-project.org/package=unikn) 
 [![Downloads](http://cranlogs.r-pkg.org/badges/unikn?color=brightgreen)](http://www.r-pkg.org/pkg/unikn) 
 
@@ -165,7 +165,7 @@ we provide its alert color (i.e., `pal_signal[2]`) as a designated color `Signal
 
 Additional pre-defined color palettes include:
 
-```{r pal_unikn_more, eval = FALSE}
+```{r pal-unikn-more, eval = FALSE}
 # Plot additional color palettes: ----- 
 seecol(pal_unikn_pref)   # palette of  9 preferred colors
 seecol(pal_unikn_light)  # palette of  8 light colors (in 4 pairs)
@@ -184,7 +184,7 @@ The `seecol()` and `usecol()` functions provide a convenient interface for _view
 
 The `seecol()` function provides a quick overview over the contents of a color palette and allows comparisons between color palettes: 
 
-```{r seecol_pref, eval = TRUE, fig.align = 'center', fig.width = 7, fig.height = 5.5}
+```{r seecol-pref, eval = TRUE, fig.align = 'center', fig.width = 7, fig.height = 5.5}
 # Plot a color palette: ----- 
 seecol(pal = pal_unikn_pref,            # palette to plot
        col_brd = "white", lwd_brd = 5)  # color and width of borders
@@ -194,7 +194,7 @@ seecol(pal = pal_unikn_pref,            # palette to plot
 
 When only a subset of a color palette are needed, the `seecol()` and `usecol()` functions provide a reasonable subset of a known ** unikn** color palette: 
 
-```{r pal_n, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r pal-n, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # All color palettes: ----- 
 seecol(n = 4)
 
@@ -213,7 +213,7 @@ Here are some examples of these functions in action:
 
 - Extending or reducing an existing color palette:
 
-```{r col_scale_1, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r col-scale-1, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 seecol(pal_unikn, n = 21)  
 # seecol(pal_seeblau, n = 8)  # provides a subset of "good" colors
 ```
@@ -224,7 +224,7 @@ Note that reducing an **unikn** color palette selects a suitable subset of its c
 
 - Combining colors to create new color palettes (of arbitrary length): 
 
-```{r col_scale_2, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r col-scale-2, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Combining colors: ----- 
 seecol(c(Seeblau, "white", Pinky), 11) 
 # seecol(c(Karpfenblau, Seeblau, "gold"), 10) 
@@ -234,13 +234,13 @@ seecol(c(Seeblau, "white", Pinky), 11)
 
 - Mixing and merging colors and color palettes into new color palettes: 
 
-```{r col_scale_3, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r col-scale-3, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Combining color palettes (and colors): ----- 
 seecol(c(rev(pal_petrol),  "white", pal_bordeaux), 11,
        col_bg = "grey90")
 ```
 
-```{r col_scale_3-b, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r col-scale-3-b, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Related combinations:
 seecol(c(rev(pal_seeblau), "white", pal_pinky), 11)
 seecol(c(rev(pal_seeblau), "white", pal_seegruen), 11)
@@ -259,7 +259,7 @@ Here are some examples:
 
 By default, simply set the color argument of a plot to `usecol()` with some **unikn** color palette: 
 
-```{r usepal_demo_barplot_1, eval = TRUE, out.width = "60%", fig.asp = .65, fig.align = 'center', collapse = TRUE}
+```{r usepal-demo-barplot-1, eval = TRUE, out.width = "60%", fig.asp = .65, fig.align = 'center', collapse = TRUE}
 # (a) Using a color palette:
 barplot(1/sqrt(1:11),  col = usecol(pal_unikn))
 ```
@@ -269,14 +269,14 @@ Providing an additional value for `n` would reduce or extend the selected color 
 <!-- 
 Additionally providing a value for `n` either reduces or extends the selected color palette: 
 
-```{r usepal_demo_barplot_2, eval = TRUE, out.width = "50%", fig.asp = .65, fig.align = 'center', collapse = TRUE}
+```{r usepal-demo-barplot-2, eval = TRUE, out.width = "50%", fig.asp = .65, fig.align = 'center', collapse = TRUE}
 # (b) Using only n colors of a palette:
 barplot(1/sqrt(1:5), col = usecol(pal_unikn, n = 5)) 
 ```
 
 Providing an opacity value for `alpha` (in the range `[0, 1]`) allows adding transparency to a plot:  
 
-```{r usepal_demo_scatter, eval = TRUE, out.width = "40%", fig.asp = 1, fig.align = 'center', collapse = TRUE}
+```{r usepal-demo-scatter, eval = TRUE, out.width = "40%", fig.asp = 1, fig.align = 'center', collapse = TRUE}
 # (c) Scatterplots:
 set.seed(-99)
 plot(x = runif(99), y = runif(99), "p", pch = 16, cex = 6, 
@@ -288,7 +288,7 @@ plot(x = runif(99), y = runif(99), "p", pch = 16, cex = 6,
 
 2. Visualizing **unikn** color palettes with `image`: 
 
-```{r use_pal_demo_image, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
+```{r use-pal-demo-image, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
 # Random images:
 set.seed(1)
 n <- 20
@@ -302,7 +302,7 @@ image(m, col = usecol(pal_seeblau, n = 50),
       main = "50 shades of Seeblau", axes = FALSE)
 ```
 
-```{r use_pal_demo_image-2, echo = FALSE, eval = FALSE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
+```{r use-pal-demo-image-2, echo = FALSE, eval = FALSE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
 # Mix pal_seeblau and pal_seegruen:
 x <- y <- seq(-4 * pi, 4 * pi, len = 15)
 r <- sqrt(outer(x^2, y^2, "+"))
@@ -312,7 +312,7 @@ image(z = cos(r^2) * exp(-r/6), col = usecol(c(pal_petrol, pal_seegruen), n = 10
 
 3. Using **unikn** in `ggplot` calls (using **ggplot2**):
 
-```{r use_pal_ggplot2, eval = FALSE, out.width = "60%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
+```{r use-pal-ggplot2, eval = FALSE, out.width = "60%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
 # Example based on https://www.r-graph-gallery.com/137-spring-shapes-data-art/ 
 
 # (1) Create data: ---- 
@@ -361,7 +361,7 @@ The color scales included in the **unikn** package are based on the CD manual of
 However, the functionality provided by the package makes it easy and straightforward to define and use your own color schemes. 
 Here are some examples from other institutions to illustrate how this can be achieved.  
 
-```{r Cardiff, echo = FALSE, eval = FALSE, fig.align = 'center', fig.width = 5, fig.height = 3}
+```{r uni-Cardiff, echo = FALSE, eval = FALSE, fig.align = 'center', fig.width = 5, fig.height = 3}
 # Cardiff University, UK: 
 # ToDo. 
 ```
@@ -373,7 +373,7 @@ The [Albert-Ludwigs Universität Freiburg](https://www.uni-freiburg.de/) provide
 Colors can be defined in a variety of ways, but R comes with convenient tools (like `col2rgb` and `convertColor` in **grDevices**) to handle most cases. The most straightforward way of creating a new color palette in R is by using its HEX/HTML code (provided in character format). 
 As the [University of Freiburg](https://www.uni-freiburg.de/) kindly provides their colors in this format, we can easily define the corresponding color palettes as named vectors: 
 
-```{r Freiburg, out.width = "67%", fig.asp = .75, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+```{r uni-freiburg-cols, out.width = "67%", fig.asp = .75, fig.align = 'center', fig.show = "hold", collapse = TRUE}
 # Basic colors: https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt
 
 pal_freiburg_bluered <- c("#004a99", "#c1002a")
@@ -401,7 +401,7 @@ names(pal_freiburg_info) <- c("mid-blau", "hell-blau", "dark-red", "hell-red", "
 
 Alternatively, we can define both (colors and names) in 1 step by using the `newpal()` function:
 
-```{r newpal_Freiburg}
+```{r uni-freiburg-newpal}
 pal_freiburg_info <- newpal(col = c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
                                     "#4d4f53", "#747678", "#b2b4b3", "#d5d6d2", "#e98300", "#efbd47"),
                             names = c("mid-blau", "hell-blau", "dark-red", "hell-red", "mid-green", "hell-green", 
@@ -412,7 +412,7 @@ pal_freiburg_info <- newpal(col = c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", 
 
 Once a new color palette has been defined (and is available in your current R environment), we can use the `seecol()` and `usecol()` functions to view, modify, and use the palette: 
 
-```{r seecol_freiburg, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r uni-freiburg-seecol, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 seecol(pal_freiburg_info)            # view color palette
 # seecol(pal_freiburg_basic, n = 7)  # extend color palette
 # seecol(c(pal_freiburg_blue, "white", pal_freiburg_grey))  # mix color palette
@@ -436,7 +436,7 @@ The color scheme of [Princeton University](https://princeton.edu/) is easily rec
 
 These definitions suggest defining 3 separate versions of orange and corresponding color palettes: 
 
-```{r Princeton, out.width = "67%", fig.asp = .75, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+```{r uni-princeton-cols, out.width = "67%", fig.asp = .75, fig.align = 'center', fig.show = "hold", collapse = TRUE}
 # HEX values for 3 shades of orange: 
 orange_basic <- "#E87722"  # Pantone 158 C
 orange_white <- "#E77500"  # orange on white
@@ -455,7 +455,7 @@ names(pal_princeton_2) <- c("orange_b", "black", "white")
 
 Alternatively, we can define both (colors and names) in 1 step by using the `newpal()` function:
 
-```{r newpal_Princeton}
+```{r uni-Princeton-newpal}
 pal_princeton_1 <- newpal(col = c("#E77500", "white", "black"),
                           names = c("orange_w", "white", "black")
                           )
@@ -464,7 +464,7 @@ pal_princeton_1 <- newpal(col = c("#E77500", "white", "black"),
 
 The new color palettes (e.g., `pal_princeton_1`) can now be viewed with `seecol()`, scaled by `usecol()`, and used in graphs (e.g., in `ggplot` commands):
 
-```{r use_ggplot2_princeton, eval = FALSE, out.width = "60%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
+```{r uni-princeton-ggplot, eval = FALSE, out.width = "60%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
 # View color palette: 
 # seecol(pal_princeton_1)  
 
@@ -499,7 +499,7 @@ The CD manual (available [here](https://docplayer.org/2328711-Max-planck-institu
     - HEX/HTML: `#D0D3D4`   
     - CMYK: `7 3 5 8`   
 
-```{r MPG_rgb, echo = FALSE, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r mpg-rgb-cols, echo = FALSE, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Using RGB values: 
 pal_mpg <- data.frame(# named colors: 
   "mpg_green" = rgb( 17, 102,  86, maxColorValue = 255),
@@ -509,7 +509,7 @@ pal_mpg <- data.frame(# named colors:
 seecol(pal = list(pal_mpg))  # Ooops...
 ```
 
-```{r MPG_hex, echo = FALSE, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r MPG-hex-cols, echo = FALSE, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Using HEX values:
 mpg_green <- "#007367"
 mpg_grey  <- "#D0D3D4"
@@ -523,14 +523,14 @@ pal_mpg <- usecol(pal = c(mpg_green, "white", mpg_grey))
 Again, the easiest way of defining a corresponding color palette is by creating a named vector. 
 To allow for better color gradients, we insert the color `"white"` between the 2&nbsp;dedicated colors: 
 
-```{r MPG_pal_def, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r mpg-pal-def, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
 pal_mpg <- c("#007367", "white", "#D0D3D4")
 names(pal_mpg) <- c("mpg green", "white", "mpg grey")
 ```
 
 Alternatively, we can define both (colors and names) in 1 step by using the `newpal()` function:
 
-```{r newpal_MPG}
+```{r mpg-newpal-def}
 pal_mpg <- newpal(col = c("#007367", "white", "#D0D3D4"),
                   names = c("mpg green", "white", "mpg grey")
                   )
@@ -539,7 +539,7 @@ pal_mpg <- newpal(col = c("#007367", "white", "#D0D3D4"),
 
 As before, can now use the `seecol()` and `usecol()` functions to view, modify, and use the new `pal_mpg` color palette: 
 
-```{r use_pal_demo_mpg, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
+```{r mpg-use-pal, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
 # View color palette: 
 # seecol(pal_mpg)
 
@@ -554,7 +554,7 @@ image(z = cos(r^2) * exp(-r/6), col = usecol(pal_mpg, n = 10),
 
 Once a new palette is defined (and available in your current R environment), the `seecol()` and `usecol()` functions allow comparing, scaling, and using them in the same fashion as the native **unikn** color palettes: 
 
-```{r compare_custom_pals, out.width = "75%", fig.asp = .50, fig.align = 'center', collapse = TRUE}
+```{r compare-custom-pals, out.width = "75%", fig.asp = .50, fig.align = 'center', collapse = TRUE}
 # Compare and extend custom color palettes:
 pals <- list(pal_freiburg_basic, pal_mpg, pal_princeton_1, pal_unikn)
 lbls <- c("Uni Freiburg", "Max Planck", "Princeton Uni", "Uni Konstanz")
@@ -574,7 +574,7 @@ As the use of these functions is explained in detail in `vignette("Text")`, we o
 
 The `mark()` function allows emphasizing text by plotting it with colored background (to provide the functionality of "Markieren"):  
 
-```{r mark_new_plot, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, fig.height = 3}
+```{r mark-new-plot, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, fig.height = 3}
 mark(labels = c("Markieren", "ist ein Bestandteil", "von Studieren."), 
      x = 0, y = .8, y_layout = .03, cex = 1.5, new_plot = "slide")
 ```
@@ -583,7 +583,7 @@ mark(labels = c("Markieren", "ist ein Bestandteil", "von Studieren."),
 
 The `uline()` function allows emphasizing text by plotting it with colored underlining (to provide the functionality of "Unterstreichen"):  
 
-```{r uline_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, fig.height = 3}
+```{r uline-demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 3, fig.height = 3}
 uline(labels = c("Geradlinig", "Authentisch", "Beweglich", "Offen", "Paradiesisch"), 
       x = .05, y = .9, y_layout = "even", cex = 1.1, font = 2, new_plot = "slide")
 ```
@@ -592,7 +592,7 @@ uline(labels = c("Geradlinig", "Authentisch", "Beweglich", "Offen", "Paradiesisc
 
 The `post()` function allows adding text to a rectangular `xbox` (to provide the functionality of "Merken"):  
 
-```{r post-demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 2}
+```{r post-demo-1, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 2}
 xbox(col = usecol(pal_seeblau[[5]]), dim = c(2, 2))
 post(labels = c("Für eine", "Kultur der", "Kreativität"), x = .1, y = .8, cex = 1.4, font = 2)
 ```
@@ -609,7 +609,7 @@ post(labels = c("creative.", "together"), new_plot = "xbox",
 
 The `heading()` function is a convenient wrapper around `mark`:  
 
-```{r heading_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 3}
+```{r heading-demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 3}
 heading(labels = c("pa-", "ra-", "die-", "sisch"))
 ```
 
@@ -619,7 +619,7 @@ Headings violating the official recommendations (e.g., step-wise titles) will ge
 
 Finally, the `url_unikn()` function allows formatting URLs the uni.kn way: 
 
-```{r url_post, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 2}
+```{r url-post, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 2, fig.height = 2}
 my_url <- url_unikn("https://www.uni-konstanz.de/")  # input URL as copied from web browser
 
 post(labels = my_url, x = .2, y = .1, font = 4, new_plot = "xbox")
@@ -629,7 +629,7 @@ post(labels = my_url, x = .2, y = .1, font = 4, new_plot = "xbox")
 
 If custom color palettes are available (see definitions above), the text decoration functions can be used for graphical annotations in the style of other institutions: 
 
-```{r others_txt_demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 5, fig.height = 3.5}
+```{r others-txt-demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 5, fig.height = 3.5}
 # (A) Using pal_freiburg_basic and pal_freiburg_blue: 
 uline(labels = c("University of Freiburg"), 
       x = .5, y = .85, font = 2, cex = 1, 
